[package]
name = "network"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "3"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
prost = "0.7"
reqwest = "0.11"
snow = "0.8"
tonic = "0.4"
lazy_static = "1"


[build-dependencies]
tonic-build = "0.4"
