[package]
name = "tokio-server"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/client.rs"
name = "client"

[[bin]]
path = "src/server.rs"
name = "server"

[dependencies]
async-prost = "0.2"
futures = "0.3"
prost = "0.7"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"]}

[build-dependencies]
prost-serde = "0.2"
