[package]
name = "axum-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
jsonwebtoken = "8"
mime_guess = "2"
rust-embed = "6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
