[package]
name = "deno-runtime-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_runtime = "0.59.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
deno-bundler = { version = "0.4.0" }

[workspace]
