[package]
name = "deno_core_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
deno_core = "0.129"
lazy_static = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
zstd = "0.11"

[build-dependencies]
deno_core = "0.129"
zstd = "0.11"



[workspace]
