[package]
name = "dioxus-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Location"], optional = true }

[features]
default = ["web"]
web = ["web-sys", "tracing-wasm", "dioxus", "dioxus/web"]
desktop = ["dioxus", "dioxus/desktop", "tracing-subscriber"]

[workspace]

[profile.release]
strip = "debuginfo"
