[package]
name = "kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1"
bytes = "1"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.7"
dashmap = "4"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"

[build-dependencies]
prost-build = "0.7"
