[package]
name = "pow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1"
blake3 = "0.3"
futures = "0.3"
hex = "0.4"
prost = "0.7"
rayon = "1"
tonic = "0.4"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.4"
