[package]
name = "v8_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_v8 = "0.37"
v8 = "0.41"


[workspace]
