[package]
name = "v8_live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
once_cell = "1"
lazy_static = "1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_v8 = "0.38"
tokio = { version = "1", features = ["rt"] }
v8 = "0.41"


[workspace]
